@@ -1,26 +1,0 @@
-print "Using SQLServer via ADONET\n"
-require_dependency 'models/course'
-require 'logger'
-
-ActiveRecord::Base.logger = Logger.new(File.expand_path(File.join(SQLSERVER_TEST_ROOT,'debug.log')))
-ActiveRecord::Base.logger.level = 0
-
-ActiveRecord::Base.configurations = {
-  'arunit' => {
-    :adapter  => 'sqlserver',
-    :mode     => 'ADONET',
-    :host     => 'localhost',
-    :username => 'rails',
-    :database => 'activerecord_unittest'
-  },
-  'arunit2' => {
-    :adapter  => 'sqlserver',
-    :mode     => 'ADONET',
-    :host     => 'localhost',
-    :username => 'rails',
-    :database => 'activerecord_unittest2'
-  }
-}
-
-ActiveRecord::Base.establish_connection 'arunit'
-Course.establish_connection 'arunit2'
